# TarefaSEU3C3

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
